# Fortal-Old

./: .astylerc  .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: c-cpp.yml
docs/: Fortal.drawio  Fortal.vsdx  docs.md  features.md  fortal_gcc_linker.flowchart.drawio  keywords.md  specifiers.md  syntax.bnf
src/: Version.h  main.cpp
src/Compiler/: Compiler.cpp  Compiler.h
src/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.h  ErrorHandler.hpp  ErrorLevel.cpp  ErrorLevel.h  ErrorLevel.hpp
src/Lexer/: Lexer.cpp  Lexer.h  Lexer.hpp
src/Location/: Location.h  Location.hpp
src/Package/: Package.cpp  Package.h
src/Package/CompilationUnit/: CompilationUnit.cpp  CompilationUnit.h
src/Package/CompilationUnit/Definition/: AliasDefinition.cpp  AliasDefinition.h  ClassDefinition.cpp  ClassDefinition.h  Definition.cpp  Definition.h  Definitions.all.h  FunctionDefinition.cpp  FunctionDefinition.h  VariableDefinition.cpp  VariableDefinition.h
src/Package/CompilationUnit/Definition/DataType/: DataType.cpp  DataType.h
src/Package/CompilationUnit/Definition/Expression/: Expression.cpp  Expression.h  ExpressionHasKind.h  Expressions.all.h  IdentifierExpression.cpp  IdentifierExpression.h  LiteralExpression.cpp  LiteralExpression.h  NewStatementExpression.cpp  NewStatementExpression.h  OperationExpression.cpp  OperationExpression.h  ParenExpression.cpp  ParenExpression.h  VariableDefinitionExpression.cpp  VariableDefinitionExpression.h
src/Package/CompilationUnit/Definition/Modifiers/: Modifiers.cpp  (+1 more)
src/Package/Identifier/: PackageIdentifier.cpp  PackageIdentifier.h  QualifiedIdentifier.h  QualifierIdentifier.cpp
src/Parser/: Parser.cpp  Parser.h
src/Token/: Token.cpp  Token.h  TokenBase.hpp  TokenBracket.hpp  TokenComment.cpp  TokenComment.h  TokenComment.hpp  TokenHasKind.cpp  TokenHasKind.h  TokenHasType.hpp  TokenIdentifier.cpp  TokenIdentifier.h  TokenIdentifier.hpp  TokenKeyword.cpp  TokenKeyword.h  TokenKeyword.hpp  TokenLiteral.cpp  TokenLiteral.h  TokenLiteral.hpp  TokenOperator.cpp  TokenOperator.h  TokenOperator.hpp  TokenSeparator.cpp  TokenSeparator.h  TokenSeparator.hpp  TokenType.hpp  Tokens.all.h
src/Token/TokenComment/: TokenComment.cpp  TokenComment.h
src/Token/TokenIdentifier/: TokenIdentifier.cpp  TokenIdentifier.h
src/Token/TokenKeyword/: TokenKeyword.cpp  TokenKeyword.h
src/Token/TokenLiteral/: TokenLiteral.cpp  TokenLiteral.h
src/Token/TokenOperator/: TokenOperator.cpp  TokenOperator.h
src/Token/TokenSeparator/: TokenSeparator.cpp  TokenSeparator.h
src/Token/TokenType/: TokenType.cpp  TokenType.h
src/Utils/: Colors.h  Format.cpp  Format.h  Format.hpp  Location.cpp  Location.h  Utils.cpp  Utils.h
test/: literals.f  main.cpp  numbers.f  syntax.f  test.c  test.f
test/fortal/: complex_num.f  empty_comment.f  object.f  procedural.f  reverse_linked_list.cpp  reverse_linked_list.f  test.f
(+26 files in other folders)
